# pbi-perf-trace

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml
src/pbi_perf_trace/: __init__.py  analysis.py  api.py  cli.py  io.py  metadata.py  normalize.py  pivot.py
tests/: test_smoke.py
tests/data/: perf_sample.json
